# GNOME-anjuta

./: .cvsignore  .gitignore  .mailmap  AUTHORS  AUTHORS.xml  BUGS  ChangeLog  FUTURE  HACKING  MAINTAINERS  Makefile.am  NEWS  README  ROADMAP  SEARCH-REPLACE  THANKS  TODO  TODO.biswa  TODO.tasks  acconfig.h  acinclude.m4  anjuta.anjuta  anjuta.desktop.in  anjuta.desktop.in.in  anjuta.doap  anjuta.glade  anjuta.jhbuildrc  anjuta.prj  anjuta.spec.in  anjuta_dialogs_strings.c  autogen.sh  configure.ac  configure.in  setup-gettext  xml-i18n-extract.in  xml-i18n-merge.in  xml-i18n-update.in
ccview/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  cccmd.cc  cccmd.h  cccproj.cc  cccproj.hh  ccview.cc  ccview.h  ccview_main.cc  ccview_main.h  cregex.hh  file.xpm  func_dialog.cc  func_dialog.h  gtk_help.cc  gtk_help.h  hash_str.h  ofolder.xpm  panes.cc  private.xpm  public.xpm  scanner.xpm  struct.xpm  tree_coll.h
data/: .cvsignore  Makefile.am  README.stock_libs  anjuta.mime  anjuta.properties  autogen.sh  autogen.sh.gnome2  autogen.sh.wxwin  default.profile  gdb.init  header.c  internal.properties  licence.txt  linux-gnome-c.api  stock_libs.anj  tags2api.py  welcome.txt  welcome.txt.in  x-anjuta-project.desktop
doc/: .cvsignore  Makefile.am  ScintillaDoc.html  anjuta-launcher.1.in  anjuta.1  anjuta.1.in  anjuta_launcher.1.in
global-tags/: .cvsignore  Makefile.am  create_global_tags.sh  create_global_tags.sh.in  tm_global_tags.c
help/: Makefile.am  index.html  index2.html  page00.html  page01.html  page02.html  page03.html  page04.html  page05.html  page06.html  page07.html  page08.html  page09.html  page10.html  page100.html  page104.html  page11.html  page110.html  page111.html  page112.html  page113.html  page114.html  page115.html  page12.html  page13.html  page14.html  page15.html  page16.html  page17.html  page18.html  page19.html  page20.html  page21.html  page22.html  page23.html  page24.html  page25.html  page26.html  page27.html  page28.html  (+6 more)
libanjuta/: .cvsignore  Makefile.am  anjuta-async-command.c  anjuta-async-command.h  anjuta-async-notify.c  anjuta-async-notify.h  anjuta-autogen.c  anjuta-autogen.h  anjuta-c-module.c  anjuta-c-module.h  anjuta-c-plugin-factory.c  anjuta-cell-renderer-captioned-image.c  anjuta-children.c  anjuta-children.h  anjuta-close-button.c  anjuta-close-button.h  anjuta-column-text-view.c  anjuta-column-text-view.h  anjuta-command-bar.c  anjuta-command-bar.h  anjuta-command-queue.c  anjuta-command-queue.h  anjuta-command.c  anjuta-command.h  anjuta-completion.c  anjuta-completion.h  anjuta-convert.c  anjuta-convert.h  anjuta-debug.c  anjuta-debug.h  anjuta-dock-pane.c  anjuta-dock-pane.h  anjuta-dock.c  anjuta-dock.h  anjuta-drop-entry.c  anjuta-drop-entry.h  anjuta-encodings.c  anjuta-encodings.h  anjuta-entry.c  anjuta-entry.h  (+122 more)
libanjutamm/: configure.in
libegg/: .cvsignore  Makefile.am  egg-action.c  egg-cell-renderer-text.c  egg-combo-action.c  egg-dock-item-grip.c  egg-dock-item.c  egg-dock-layout.c  egg-dock-master.c  egg-dock-notebook.c  egg-dock-object.c  egg-dock-paned.c  egg-dock-placeholder.c  egg-dock-tablabel.c  egg-dock.c  egg-entry-action.c  egg-menu-merge.c  egg-recent-action.c  egg-recent-files-module.c  egg-recent-model.c  egg-submenu-action.c  eggaccelerators.c  eggcellrendererkeys.c  eggcellrendererpopup.c  eggcomboselect.c  eggtreemodelfilter.c  eggtreeviewstate.c  gtkcellview.h  test-actions.c  test-dock.c  test-drag.c  test-multi-drag.c  test-toolbar.c  test-tree-utils.c
libgoocanvas/: Makefile.am  goocanvas.c  goocanvas.h  goocanvasatk.c  goocanvasgroup.c  goocanvasimage.c  goocanvasitemmodel.c  goocanvasitemsimple.c  goocanvaspolyline.c  goocanvasstyle.c  goocanvastable.c  goocanvastext.c  goocanvastext.h  goocanvasutils.h  goocanvaswidget.c  goocanvaswidget.h
mime/: Makefile.am  anjuta.applications  anjuta.keys  anjuta.mime  anjuta.xml
pixmaps/: .cvsignore  Makefile.am  add.xpm  an_tag.xpm  anjuta_icon.xpm  autocomplete.xpm  bfoldc.xpm  bfoldo.xpm  blank.xpm  block_end.xpm  block_select.xpm  block_start.xpm  bookmark_first.xpm  bookmark_last.xpm  bookmark_next.xpm  bookmark_prev.xpm  bookmark_toggle.xpm  breakpoint.xpm  build.xpm  build_all.xpm  build_stop.xpm  calltip.xpm  cfolder.xpm  class.xpm  close_file.xpm  close_file_small.xpm  close_project.xpm  compile.xpm  configure.xpm  console.xpm  continue.xpm  copy.xpm  cut.xpm  debug.xpm  debug_stop.xpm  dock.xpm  error_next.xpm  error_prev.xpm  exec.xpm  execute.xpm  (+103 more)
plugins/: Makefile.am
printing/: .cvsignore  Makefile.am  print-doc.c  print-doc.h  print-util.c  print-util.h  print.c  print.h
scintilla/: .cvsignore  AutoComplete.cxx  AutoComplete.h  CallTip.cxx  CallTip.h  CellBuffer.cxx  CellBuffer.h  Document.cxx  Document.h  DocumentAccessor.cxx  DocumentAccessor.h  Editor.cxx  Editor.h  Indicator.h  KeyMap.cxx  KeyWords.cxx  LexAVE.cxx  LexAda.cxx  LexAsm.cxx  LexBullant.cxx  LexCPP.cxx  LexCSS.cxx  LexConf.cxx  LexCrontab.cxx  LexEiffel.cxx  LexFortran.cxx  LexHTML.cxx  LexLisp.cxx  LexLua.cxx  LexMatlab.cxx  LexOthers.cxx  LexPascal.cxx  LexPerl.cxx  LexPython.cxx  LexRuby.cxx  LexSQL.cxx  LexVB.cxx  LineMarker.cxx  LineMarker.h  Makefile.am  (+17 more)
src/: .cvsignore  CORBA-Server.c  CORBA-Server.h  Gladen-common.c  Gladen-stubs.c  Gladen.h  Makefile.am  Prj-common.c  Prj-skelimpl.c  Prj-skels.c  Prj-stubs.c  Prj.h  about.c  about.h  action-callbacks.c  action-callbacks.h  an_file_view.c  an_file_view.h  an_symbol_view.c  an_symbol_view.h  aneditor.cxx  aneditor.h  anjuta-actions.h  anjuta-app.c  anjuta-app.h  anjuta-application.c  anjuta-application.h  anjuta-callbacks.c  anjuta-callbacks.h  anjuta-encodings.c  anjuta-encodings.h  anjuta-marshalers.list  anjuta-plugins.c  anjuta-plugins.h  anjuta-tools.c  anjuta-tools.h  anjuta-ui.c  anjuta-ui.h  anjuta-window.c  anjuta-window.h  (+230 more)
tagmanager/: .cvsignore  Makefile.am  c.c  ctags.c  debug.c  debug.h  entry.h  general.h  get.c  get.h  keyword.c  main.h  options.c  options.h  parse.c  python.c  read.c  read.h  regex.c  test_tm_buffer.c  tm_file_entry.c  tm_project.c  tm_source_file.c  tm_symbol.c  tm_tag.c  (+4 more)
(+3688 files in other folders)
